<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".RegistrationActivity">


    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="0dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="28dp" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="text" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/userNameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/userEmailEditText" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/passwordAgain"
        android:inputType="textPassword" />


    <CheckBox
        android:id="@+id/contributeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordAgainEditText"
        android:layout_marginTop="30dp"
        android:onClick="onCheckboxClicked"
        android:text="Hozzájárulok, hogy az alkalmazás hozzáférjen a helyzetemhez használat közben" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/contributeCheckbox"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:onClick="regist"
            android:backgroundTint="@color/strong_brown"
            android:text="@string/registration" />

        <Button
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:onClick="cancel"
            android:backgroundTint="@color/strong_brown"
            android:text="Mégsem" />

    </LinearLayout>


</RelativeLayout>